Fix in-document navigations breaking icons from Web Manifests

Content notifies with DidUpdateWebManifestURL() in page loads *unless*
its a navigation within the same document. This requires handling those
cases differently and hence not clearing the manifest URL, because
otherwise the page is believed to contain no manifest.

BUG=724832

Review-Url: https://codereview.chromium.org/2950563002
Cr-Commit-Position: refs/heads/master@{#483072}

Former-commit-id: 406899d78bedbdb4d09f65f65991126e61a8e758